# K3NG_Keyer_ESP32_BT_Keyboard

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  partitions.csv  partitions_custom.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults-backup  sdkconfig.old
components/Goertzel/: CMakeLists.txt  goertzel.cpp  goertzel.h
components/IST8310/: CMakeLists.txt
components/IST8310/examples/IST8310_get_mag_vector/: IST8310_get_mag_vector.ino
components/LiquidCrystal_I2C/: CMakeLists.txt  LiquidCrystal_I2C.c  LiquidCrystal_I2C.cpp
components/MCP23017/: CMakeLists.txt
components/TFT_eSPI/: CMakeLists.txt  TFT_eSPI.h  User_Setup.h  User_Setup_Select.h
components/TFT_eSPI/Extensions/: Button.cpp  Button.h  Touch.cpp
components/TFT_eSPI/Processors/: TFT_eSPI_ESP32.c  TFT_eSPI_ESP32_S3.h
components/TFT_eSPI/examples/320 x 240/Keypad_240x320/: Keypad_240x320.ino
components/TFT_e_SPI_Custom_Config/: User_Setup_DIYMalls_240x320.h  User_Setup_Hosyond_320x480.h  User_Setup_IdeaSpark_170x320.h  User_Setup_M5Stack_Core2.h  User_Setup_Pico_320x480_res.h  User_Setup_ST7262_480x800_Cap.h  User_Setup_ST7796_320x480_Cap.h
components/TimeLib/: TimeLib.h
components/TinyGPSPlus-ESP32/: CMakeLists.txt
components/TinyGPSPlus-ESP32/src/: TinyGPSPlus.cpp  TinyGPSPlus.h
components/bt_keyboard/: CMakeLists.txt
components/bt_keyboard/src/: bt_keyboard.cpp  bt_keyboard.hpp  library.properties
components/buttonarray/: CMakeLists.txt
components/gt911-arduino/: CMakeLists.txt
components/gt911-arduino/examples/TouchPrint/: TouchPrint.ino
libraries/K3NG_PS2Keyboard/: K3NG_PS2Keyboard.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  if_used_Kconfig.projbuild  keyer.h  keyer_debug.h  keyer_dependencies.h  keyer_esp32_dev.h  keyer_features_and_options.h  keyer_features_and_options_esp32_dev.h  keyer_features_and_options_pico.h  keyer_hardware.h  keyer_pin_settings.h  keyer_pin_settings_esp32_dev.h  keyer_pin_settings_pico.h  keyer_settings_esp32_dev.h  keyer_settings_pico.h  main.cpp  main.ino  nmea.h
main/TFT_e_SPI_Custom_Config/: User_Setup_DIYMalls_240x320.h  User_Setup_IdeaSpark_170x320.h  User_Setup_Select.h
main/lib/buttonarray/: CMakeLists.txt
precompiled_images/: Flash_Tool_Readme.txt
precompiled_images/TFT_PICO_320x480_RES_LCD/: main.ino.uf2
